# pcc-pro

./: .gitignore  CMakeLists.txt  README.md  main.cpp
algorithms/: BoyerMoore.cpp  BoyerMoore.hpp  KnuthMorrisPratt.cpp  KnuthMorrisPratt.hpp  RabinKarp.cpp  RabinKarp.hpp
include/: MultithreadedAlgorithms.cpp  MultithreadedAlgorithms.hpp  bm.hpp  kmp.hpp  rk.hpp
src/: bm.cpp  kmp.cpp  main.cpp  rk.cpp
tests/: test1017k.txt  test200k.txt  test2034k.txt  test390k.txt  test770k.txt
